Layout bugfix for mobile devices

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -52,7 +52,16 @@ header {
     color: orange;
     font-weight: bold;
   }
+  @media only screen and (max-width : 500px) {
+    & { grid-template-columns: [logo-start] 100%; }
+    #logo {
+      text-align: center;
+      position: relative;
+      left: -1em;
+    }
+  }
 }
+
 
 .app-container {
   display: grid;
@@ -71,13 +80,32 @@ header {
   display: grid;
   grid-template-rows: auto fit-content(0);
 
+  @media only screen and (max-width : 500px) {
+    & {
+      border: none;
+      height: 100%;
+      max-height: 100%;
+      width: 100%;
+    }
+  }
+  /** This is to fix a bug in chrome/chrome mobile, so it limits
+      the scrollable area when a lot of data is rendered in the conversation */
+  &__conversation-parent {
+    position: relative;
+  }
   &__conversation {
-    overflow-y: scroll;
+    overflow-y: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    max-height: 100%;
+    /** end bugfix **/
     ol {
       padding: 10px;
       list-style: none;
       li {
-        display: inline-block;
+       display: inline-block;
         float: left;
         clear: both;
       }
@@ -102,3 +130,4 @@ header {
     } 
   }
 }
+
